# test_bot_real

./: .env_prod  pyproject.toml
